--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-portifolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://rafaeljcadena.github.io/work-react-cadena",
+  "homepage": "https://rafaeljcadena.github.io/work-react-cadena/",
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
